---
source: buildpacks/nodejs-npm-install/src/errors.rs
---
! Multiple lockfiles detected
!
! The following lockfiles were found in this application: package-lock.json, yarn.lock, pnpm-lock.yaml
!
! More than one package manager has created lockfiles for this application. Only one can be used to install dependencies but the buildpack can't determine which when multiple lockfiles are present.
!
! - To use `npm` to install your application's dependencies please delete the following lockfiles:
!
!     $ git rm pnpm-lock.yaml
!     $ git rm yarn.lock
!
! - To use `pnpm` to install your application's dependencies please delete the following lockfiles:
!
!     $ git rm package-lock.json
!     $ git rm yarn.lock
!
! - To use `Yarn` to install your application's dependencies please delete the following lockfiles:
!
!     $ git rm package-lock.json
!     $ git rm pnpm-lock.yaml
!
! See the Knowledge Base for more info: https://help.heroku.com/0KU2EM53
!
! Once your application has only one lockfile, commit the results to git and retry your build.
